# bottleneck

./: .gitignore  attr_dict.py  experiment.py  flake.nix  main.py  pyproject.toml  run-gat-2-8.py  run-gcn-2-8.py  run-ggnn-2-8.py  run-gin-2-8.py
