[tool.poetry]
name = "bachelor-project"
version = "0.1.0"
description = ""
authors = ["Joshua Niemelä <josh@jniemela.dk>", "Mustafa Al-Abdelamir <muhe@di.ku.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.0"
torch-geometric = "^2.5.3"
torchvision = "^0.19.1"
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
